# WebRtcWrapper

./: .gitignore  CMakeLists.txt  CMakelists.txt  README.md
client/: webRTC_client_wrapper.cpp
common/: MainWindow.cpp
inc/: CapturerTrackSource.h  test_code.h  webRTC_client_wrapper.h  webRTC_server_wrapper.h  webRTC_utility.h  webRTC_wrapper_client_callback.h
include/: MainWindow.h  SetSessionDescriptionObserver.h  webRTC_client_wrapper.h  webRTC_server_wrapper.h  webRTC_wrapper_client_ callback.h
server/: webRTC_server_wrapper.cpp
test/: client_main.cpp
